--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,24 @@ a {
   box-sizing: border-box;
 }
 
+/* html {
+  filter: invert(100%);
+}
+
+img {
+  filter: invert(100%);
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    filter: invert(100%);
+  }
+
+  img {
+    filter: invert(100%);
+  }
+} */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
